# Haskell-CnC

./: .gitignore  AST.hs  CncGrammar.y  CncLexer.x  GatherGraph.hs  HEADER.txt  LICENSE  Main.hs  Makefile  NightlyTester.hs  README.txt  Setup.hs  SrcLoc.hs  TODO.txt  benchlist.txt  benchlist_big.txt  binsearch_throughput.hs  build_distro.sh  cnc.sh  cnc_wrapper.hs  default_opt_settings.sh  example_big_run_32core.sh  example_big_run_4core.sh  extract_gc_profile.hs  extract_version.hs  haskell-cnc.cabal  haskell_cnc.h  install_environment_vars.sh  memprof  nightly_test.hs  ntimes  ntimes_binsearch.sh  runAllTests.hs  run_all_FROMPACKED.sh  run_all_PACKITUP.sh  run_all_examples.sh  run_all_shared.sh  run_all_tests.sh  runcnc  scaling.hs  (+1 more)
Intel/: Cnc.Header.hs  Cnc.hs  Cnc10.hs  Cnc10ver1.hs  Cnc11.hs  Cnc3.hs  Cnc4.hs  Cnc5.hs  Cnc6.hs  Cnc7.hs  Cnc8.hs  Cnc9.hs  CncPure.hs  CncSM.hs  CncUtil.hs  HCilk.hs  README.txt  shared_5_6.hs  simple_stack.hs  work_stealing_deques.hs
Intel/Cnc/: BenchSynth.hs  EasyEmit.hs  README.txt
Intel/Cnc/BenchSynth/: Makefile  cnc_produceReduce.cpp  cnc_reduce_header.cpp
Intel/Cnc/Spec/: AST.hs  CncGrammar.y  CncGrammar.y.pp  CncGraph.hs  CncLexer.x  CncViz.hs  Curses.hs  GatherGraph.hs  Globals.hs  GraphAnalysis.hs  Main.hs  MainExecutable.hs  README.txt  ReadHarch.hs  SrcLoc.hs  TagFun.hs  TraceVacuum.hs  Util.hs  Vacuum.hs  Version.hs
Intel/Cnc/Spec/Codegen/: CodegenShared.hs  CppOld.hs  Haskell.hs  Plugins.hs
Intel/Cnc/Spec/Codegen/Plugins/: Depends.hs  ReductionDone.hs  TagFunCorrectness.hs
Intel/Cnc/Spec/Passes/: README.txt  ReadHarch.hs  TypeDef.hs
Intel/Cnc/Spec/tests/: tagfuns1.cnc  tagfuns1.cpp  tagfuns2.cnc
Intel/HCilk/: HCilk_Sparks.hs  HCilk_Threads.hs  parfib_basic.hs  parfib_cilk.hs  parfib_threshold.hs
examples/: Makefile  blackscholes.hs  cholesky.hs  embarrassingly_par.hs  fib.hs  hello_world.hs  item_references.hs  mandel.hs  mandel_opt.hs  mandel_opt2.hs  nbody.hs  par_seq_par_seq.hs  primes.hs  primes2.hs  primes_serial.hs  queens.hs  sched_tree.hs  sieve.hs  threadring.hs  threadring_onestep.hs
examples/empty_task_topologies/: par_pipelines.hs  task_dump.hs  task_dump_sync.hs  task_pump.hs
graphPartitioner/: GraphBase.cpp  HarchTreeTraverser.cpp  MetisGraph.cpp  MetisVertex.cpp  PartitionFileTreeTraverser.cpp  Profile_Graph.cpp  Profile_Vertex.cpp  VertexBase.cpp  createPartitions.cpp  importer.cpp  pathPerNode.cpp  recursiveSplit.sh  taskGraph2metis.cpp  topologicalOrdering.cpp
graphPartitioner/include/: GraphBase.h  HarchTreeTraverser.h  MetisGraph.h  MetisVertex.h  PartitionFileTreeTraverser.h  Profile_Graph.h  Profile_Vertex.h  VertexBase.h
scripts/: sim_hypothetical_scalable_gc.hs
tests/: tagfuns1.cnc
tests_spec/: .gitignore  Makefile  README.txt  bigger_cycle.cmpr  bigger_cycle.cnc  bigger_cycle.cpp  cholesky.cnc  eigensolver.cnc  first_existing.sh  mandel.cnc  reduction_test.cmpr  reduction_test.cnc  reduction_test.cpp  reduction_test2.cmpr  reduction_test2.cnc  reduction_test2.cpp  run_erroneous.sh  run_tests.hs  simple_cycle.cmpr  simple_cycle.cnc  simple_cycle.cpp  tagfun_checking_invalid.cmpr  tagfun_checking_invalid.cpp  tagfun_checking_valid.cmpr  tagfun_checking_valid.cnc  tagfun_checking_valid.cpp  tagfun_depends.cmpr  tagfun_depends.cnc  tagfun_depends.cpp  tagfuns1.cnc  tagfuns1.cpp  tagfuns2.cnc  tagfuns3.cnc  two_cycles.cmpr  two_cycles.cnc  two_cycles.cpp
tests_spec/harch_examples/: test1A_simple_tree.harch  test1B_redundant_parts.harch  test1C_error_bad_index_nums.harch
tests_spec/legacy/: test001.cnc  test002.cnc  test003.cnc  test004.cnc  test005.cnc  test006.cnc  test007.cnc  test008.cnc  test009.cnc  test010.cnc  test011.cnc  test012.cnc  test013.cnc  test014.cnc  test015.cnc  test016.cnc  test017.cnc  test018.cnc  test019.cnc  test020.cnc  test021.cnc  test022.cnc  test023.cnc  test024.cnc  test025.cnc  test026.cnc  test027.cnc  test028.cnc  test029.cnc  test030.cnc  test031.cnc  test032.cnc  test033.cnc  test034.cnc  test035.cnc  test036.cnc  test037.cnc  test038.cnc  test039.cnc  test040.cnc  (+92 more)
tests_trace/: fib.cnctrace
