Name:           haskell-cnc
Version:        0.1
License: LGPL
License-file:   LICENSE
Stability: Beta
Author:			Ryan Newton <rrnewton@gmail.com>
Maintainer:		Ryan Newton <rrnewton@gmail.com>
homepage: http://software.intel.com/en-us/articles/intel-concurrent-collections-for-cc/
Copyright: Copyright (c) 2009-2010 Intel Corporation
Synopsis: Library for parallel programming in the Intel Concurrent Collections paradigm.
Description: Intel (Concurrent Collections) CnC is a data-flow like
 deterministic parallel programming model, similar to
 stream-processing but in which graph nodes share data in tables.

Category: system
Cabal-Version: >=1.2.3

-- Needed for the scaling.hs plotting script:
--   HSH, gnuplot
-- , judy>=0.2.2
build-type: Simple


library
  build-depends:  base, mtl, containers, time, random, array, ghc-prim, extensible-exceptions, HUnit
  exposed-modules:  Intel.Cnc Intel.CncUtil Intel.CncPure
--                    Intel.Cnc3
  extensions: CPP, 
       -- These extensions are needed for Cnc.hs
       FlexibleInstances, BangPatterns, MagicHash, ScopedTypeVariables, DeriveDataTypeable, MultiParamTypeClasses,
       -- And the following are needed for CncPure.hs:
       ExistentialQuantification, ScopedTypeVariables, BangPatterns, NamedFieldPuns, RecordWildCards

  GHC-Options: -O2 -threaded 
  install-includes: ntimes ntimes_minmedmax README.txt haskell_cnc.h Makefile install_environment_vars.sh default_opt_settings.sh runcnc run_all_tests.sh scaling.hs 
       examples/hello_world.hs examples/mandel.hs examples/primes.hs examples/primes2.hs examples/sched_tree.hs examples/threadring_onestep.hs examples/threadring.hs examples/embarrassingly_par.hs examples/fib.hs examples/nbody.hs
-- -Wall 
-- This seems to be completly ignored currently:
  -- Test test-bar
  --   type: library-1
  --   test-is: Intel.Cnc

Executable runAllTests
  Main-is:           runAllTests.hs
  Build-Depends:     base >= 3 && < 5, directory, process
  other-modules:  Intel.Cnc Intel.CncUtil Intel.CncPure
  extensions: CPP
  GHC-Options: -O2 -threaded 


-- exposed-modules, exposed, buildable, build-tools, cpp-options,
-- cc-options, ld-options, pkgconfig-depends, frameworks, c-sources,
-- extensions, extra-libraries, extra-lib-dirs, includes,
-- install-includes, include-dirs, hs-source-dirs, other-modules,
-- ghc-prof-options, ghc-shared-options, ghc-options, hugs-options,
-- nhc98-options, jhc-options



--extra-source-files: COPYING
--Cabal-Version: >=1.2.3
--Build-type: Simple

-- flag buildtests
--   description: Build the executable to run unit tests
--   default: False

-- Extensions: ExistentialQuantification, OverlappingInstances,
--    UndecidableInstances, FlexibleContexts, CPP


-- Executable runtests
--   if flag(buildtests)
--     Buildable: True
--     Build-Depends: base >= 4 && < 5, process, mtl, regex-compat,
--       MissingH>=1.0.0,
--       hslogger, filepath, regex-base, regex-posix, directory,
--       bytestring, HUnit, testpack
--     if !os(windows)
--       Build-Depends: unix
--   else
--     Buildable: False
--   Main-Is: runtests.hs
--   HS-Source-Dirs: testsrc, .
--   Extensions: ExistentialQuantification, OverlappingInstances,
--     UndecidableInstances, FlexibleContexts, CPP
--   GHC-Options: -O2 -threaded
